css naming changing and alignment fixed

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
             <h1 class="margin-top-bottom">
                 Salon de Kathmandu B&B - Room 1 (with breakfast)
             </h1>
-            <div class="flexSeparator margin-bottom">
-                <div class="flexSeparator">
+            <div class="flex-separator margin-bottom">
+                <div class="flex-separator">
                     <span class="margin-right icon"><img src="./images/star.png" alt="star" /></span>
                     <span class="margin-right">4.88</span>
                     <span class="underline margin-right">249 reviews</span>
                     <span> · </span>
                     <span class="margin-right-left">Kathmandu, Central Region, Nepal</span>
                 </div>
-                <div class="flexSeparator">
-                    <div class="flexSeparator margin-right btn-hover padding">
+                <div class="flex-separator">
+                    <div class="flex-separator margin-right btn-hover padding">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
                             role="presentation" focusable="false"
                             style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;"
@@ -92,7 +92,7 @@
                         </svg>
                         <span class="underline">Share</span>
                     </div>
-                    <div class="flexSeparator btn-hover padding">
+                    <div class="flex-separator btn-hover padding">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
                             role="presentation" focusable="false"
                             style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;"
@@ -107,7 +107,7 @@
             </div>
         </div>
         <!-- images section -->
-        <div class="flexSeparator pictures">
+        <div class="flex-separator pictures">
             <div class="big-picture margin-right img-hover">
                 <img src="https://a0.muscache.com/im/pictures/6d32edc4-d842-4927-9375-504b4b1801da.jpg?im_w=1200"
                     alt="room1" />
@@ -144,9 +144,9 @@
     </section>
 
     <!-- middle part with form -->
-    <section class="roomInfoSection container-fluid flexSeparator">
+    <section class="roomInfoSection container-fluid flex-separator">
         <div class="left">
-            <div class="hostedBy flexSeparator">
+            <div class="hostedBy flex-separator">
                 <div>
                     <h1 class="margin-top-bottom">
                         Room in a bed and breakfast hosted by Jennifer
@@ -381,11 +381,11 @@
                 </div>
             </div>
         </div>
-        <!-- right sticky part for form(check-in &) -->
+        <!-- right right__sticky part for form(check-in &) -->
         <div class="right">
-            <div class="sticky">
-                <div class="stickyForm">
-                    <div class="right__top-details">
+            <div class="right__sticky">
+                <div class="sticky__form">
+                    <div class="right-sticky__top-details">
                         <div>
                             <span>$20</span>
                             night
@@ -405,7 +405,7 @@
                             <p class="bold">Check-Out</p>
                             <p>8/3/2024</p>
                         </div>
-                        <div class="grid3 flexSeparator ">
+                        <div class="grid3 flex-separator ">
                             <div>
                                 <p class="bold">Guests</p>
                                 <p>1 guest</p>
@@ -433,20 +433,20 @@
                         <p class="text-center">You won't be charged yet</p>
                     </div>
                     <div>
-                        <div class="flexSeparator margin-bottom">
+                        <div class="flex-separator margin-bottom">
                             <p>
                                 $20 x 5 nights
                             </p>
                             <p>$99</p>
                         </div>
-                        <div class="flexSeparator margin-bottom">
+                        <div class="flex-separator margin-bottom">
                             <p>
                                 Airbnb service fee
                             </p>
                             <p>$14</p>
                         </div>
                         <hr class="divider margin-top margin-bottom" />
-                        <div class="flexSeparator"">
+                        <div class="flex-separator"">
               <h2 >Total</h2>
                             <span class=" bold">$113</span>
                         </div>
@@ -468,10 +468,24 @@
                         </g>
                     </svg>
                 </div>
+                <div class="margin-top flex align flex-center">
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
+                            role="presentation" focusable="false"
+                            style="display: block; height: 16px; width: 16px; fill: grey;">
+
+                            <path
+                                d="M28 6H17V4a2 2 0 0 0-2-2H3v28h2V18h10v2a2 2 0 0 0 2 2h11.12a1 1 0 0 0 .84-1.28L27.04 14l1.92-6.72A1 1 0 0 0 28 6z">
+                            </path>
+                        </svg>
+                    </div>
+                    <span class="grey underline">Report this listing</span>
+                </div>
             </div>
 
         </div>
     </section>
+
     <!-- Reviews sections -->
     <section class="reviews container-fluid flex flex-column">
         <hr class="divider margin-bottom" />
@@ -486,21 +500,21 @@
         </div>
         <div class="grid-container2 review__gap--more">
             <div>
-                <div class="flexSeparator" style="margin-bottom: 20px;">
+                <div class="flex-separator" style="margin-bottom: 20px;">
                     <p>Cleanliness</p>
                     <div class="flex align">
                         <p class="indicator"></p>
                         4.9
                     </div>
                 </div>
-                <div class="flexSeparator" style="margin-bottom: 20px;">
+                <div class="flex-separator" style="margin-bottom: 20px;">
                     <p>Communication</p>
                     <div class="flex align">
                         <p class="indicator"></p>
                         4.9
                     </div>
                 </div>
-                <div class="flexSeparator">
+                <div class="flex-separator">
                     <p>Check-in</p>
                     <div class="flex align">
                         <p class="indicator"></p>
@@ -509,21 +523,21 @@
                 </div>
             </div>
             <div>
-                <div class="flexSeparator" style="margin-bottom: 20px;">
+                <div class="flex-separator" style="margin-bottom: 20px;">
                     <p>Accuracy</p>
                     <div class="flex align">
                         <p class="indicator"></p>
                         4.9
                     </div>
                 </div>
-                <div class="flexSeparator" style="margin-bottom: 20px;">
+                <div class="flex-separator" style="margin-bottom: 20px;">
                     <p>Location</p>
                     <div class="flex align">
                         <p class="indicator"></p>
                         4.9
                     </div>
                 </div>
-                <div class="flexSeparator">
+                <div class="flex-separator">
                     <p>Value</p>
                     <div class="flex align">
                         <p class="indicator"></p>
@@ -535,68 +549,71 @@
 
             </div>
         </div>
-        <div class="grid-container2">
+        <!-- users comments -->
+        <div class="grid-container2 user-comments review__gap--more">
             <!-- first column -->
             <div>
-                <div style="height: 200px;">
+                <div class="user-comments__column">
                     <!-- top div -->
-                    <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <div class="flex align margin-bottom">
                         <img src="https://a0.muscache.com/im/pictures/user/64968b39-1fcf-4fe6-ac0e-56d3acf2f52b.jpg?im_w=240"
                             alt="picture" style="height: 40px; width: 40px; border-radius: 50%;">
                         <div>
                             <h3 style="margin: 0">Reda</h3>
-                            <span>July 2023</span>
+                            <p>July 2023</p>
                         </div>
                     </div>
                     <p>The place is a blend of city centred location and hidden beautifull green garden that gives you a
                         feeling of wildeness and freshness. Negatif point is the building view around.....</p>
-                    <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><span
-                            style="text-decoration: underline;">Show more</span> ></button>
+                    <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;">
+                        <p style="text-decoration: underline;">Show more</p>
+                    </button>
                 </div>
-                <div style="margin-top: 30px; height: 200px;">
+                <div class="user-comments__column">
                     <!-- top div -->
-                    <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <div class="flex align margin-bottom">
                         <img src="https://a0.muscache.com/im/pictures/user/User-513249679/original/b09a999f-4df1-48b6-9061-6c85b36b244b.jpeg?im_w=240"
                             alt="picture" style="height: 40px; width: 40px; border-radius: 50%;">
                         <div>
                             <h3 style="margin: 0">Reda</h3>
-                            <span>July 2023</span>
+                            <p>July 2023</p>
                         </div>
                     </div>
                     <p>The place is a blend of city centred location and hidden beautifull green garden that gives you a
                         feeling of wildeness and freshness. Negatif point is the building view around.....</p>
-                    <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><span
-                            style="text-decoration: underline;">Show more</span> ></button>
+                    <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;">
+                        <p style="text-decoration: underline;">Show more</p>
+                    </button>
                 </div>
             </div>
 
             <!-- second column-->
             <div>
-                <div style="height: 200px;">
+                <div class="user-comments__column">
                     <!-- top div -->
-                    <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <div class="flex align margin-bottom">
                         <img src="https://a0.muscache.com/im/pictures/user/ac469176-39b8-4e56-952e-6de3bc590cc1.jpg?im_w=240"
                             alt="picture" style="height: 40px; width: 40px; border-radius: 50%;">
                         <div>
                             <h3 style="margin: 0">Gleb</h3>
-                            <span>July 2023</span>
+                            <p>July 2023</p>
                         </div>
                     </div>
                     <p>Good place. Like at home. Height ceiling.</p>
-                    <!-- <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><span style="text-decoration: underline;">Show more</span> ></button> -->
+                    <!-- <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><p style="text-decoration: underline;">Show more</p> ></button> -->
                 </div>
-                <div style="margin-top: 30px; height: 200px;">
+                <div class="user-comments__column">
                     <!-- top div -->
-                    <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <div class="flex align margin-bottom">
                         <img src="https://a0.muscache.com/im/pictures/user/ef2015a8-4ea3-43a4-9f90-e8afff603a0d.jpg?im_w=240"
                             alt="picture" style="height: 40px; width: 40px; border-radius: 50%;">
                         <div>
                             <h3 style="margin: 0">Gleb</h3>
-                            <span>July 2023</span>
+                            <p>July 2023</p>
                         </div>
                     </div>
                     <p>Great place</p>
-                    <!-- <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><span style="text-decoration: underline;">Show more</span> ></button> -->
+                    <!-- <button class="show-all-btn" style="border: none; padding: 0; margin-top: 20px;"><p style="text-decoration: underline;">Show more</p> ></button> -->
                 </div>
             </div>
         </div>
@@ -647,7 +664,7 @@
             <!-- first column -->
             <div style="display: flex; flex-direction: column; gap: 20px;">
                 <span style="font-weight: bold;">House rules</span>
-                <div class="flexColumnGaps" style="height: 120px;">
+                <div class="flex-column-gaps" style="height: 120px;">
                     <span>Check-in: 3:00 PM - 10:00 PM</span>
                     <span>Checkout before 12:00 PM</span>
                     <span>2 guests maximum</span>
@@ -659,7 +676,7 @@
             <!-- second column -->
             <div style="display: flex; flex-direction: column; gap: 20px;">
                 <span style="font-weight: bold;">Safety & property</span>
-                <div class="flexColumnGaps" style="height: 120px;">
+                <div class="flex-column-gaps" style="height: 120px;">
                     <span>Carbon monoxide alarm not reported</span>
                     <span>Smoke alarm not reported</span>
                     <span>Not suitable for children and infants</span>
@@ -671,7 +688,7 @@
             <!-- Third column -->
             <div style="display: flex; flex-direction: column; gap: 20px;">
                 <span style="font-weight: bold;">Cancellation policy</span>
-                <div class="flexColumnGaps" style="height: 120px;">
+                <div class="flex-column-gaps" style="height: 120px;">
                     <span>This reservation is non-refundable.</span>
                     <span>Review the Host’s full cancellation policy which applies even if you cancel for illness or
                         disruptions caused by COVID-19.</span>
@@ -689,7 +706,7 @@
         <!-- middle part -->
         <div></div>
         <!-- Last part( copyright part) -->
-        <div class="flexSeparator" style="margin: 20px 0px;">
+        <div class="flex-separator" style="margin: 20px 0px;">
             <ul class="copyrightList">
                 <li>© 2023 Airbnb, Inc.</li>
                 <li class="pointerDivider">.</li>
